- fixes some navbar spacing and scrolling when viewing a movie

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,7 +13,7 @@
         
         @media only screen and (max-width: 1100px) {
             margin-left: 0;
-            margin-top: 5rem;
+            padding-top: 5rem;
             width: 100%;
         }
     }
