--- a/src/app/movie-info/movie-info.component.scss
+++ b/src/app/movie-info/movie-info.component.scss
@@ -2,6 +2,9 @@
     width: 100%;
     position: relative;
     .container{
+        @media only screen and (max-width: 1100px) {
+            margin-top: -5rem;
+        }
         width: 100%;
         position: relative;
 
